--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,32 @@ body {
     letter-spacing: 1px;
   }
 
+  .error-message {
+    /* background: rgba(255, 255, 255, 0.7); */
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  .error-message > div {
+    max-width: 500px;
+    background: #333;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 1% auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .error-message .text {
+    color: #fff;
+    font-weight: bold;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
   /* animations */
   @keyframes flip {
     0% {
