--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,35 @@
 body {
     text-align: center;
     font-size: 1em;
-    font-family: verdana;
+    font-family: sans-serif;
     margin: 0;
   }
-  h1 {
-    font-size: 1.2em;
-    padding: 30px 0;
-    border-bottom: 1px solid #eee;
-    margin: 0 0 30px 0;
-    color: #333;
+
+  .header {
+    margin-top: 2rem;
   }
+
+  .header i {
+    font-size: 1.5rem;
+  }
+
+  .header h1 {
+    font-weight: bold;
+    text-align: center;
+    display: inline-block;
+    font-size: 1.8rem;
+    padding: 0px 10px;
+    border-bottom: 1px solid #eee;
+    margin: 0 auto;
+    /* color: #333; */
+  }
+  
+  .question-style {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+  }
+
   /* rows */
   .row {
     text-align: center;
@@ -121,7 +140,7 @@ body {
   }
 
   .modal > div {
-    max-width: 480px;
+    max-width: 50%;
     background: #fff;
     padding: 40px;
     border-radius: 10px;
@@ -161,6 +180,30 @@ body {
     font-size: 0.8em;
     text-transform: uppercase;
     letter-spacing: 1px;
+  }
+
+  .rules {
+    text-align: left;
+    background: rgba(255, 255, 255, 0.7);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  .rules > div {
+    max-width: 50%;
+    background: #fff;
+    padding: 40px;
+    border-radius: 10px;
+    margin: 10% auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .cross-icon {
+    cursor: pointer;
+    float: right;
   }
 
   /* animations */
