--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,8 @@ body {
 
   .row > div {
     display: block;
-    width: 60px;
-    height: 60px;
+    width: 3.75rem;
+    height: 3.75rem;
     border: 1px solid #bbb;
     margin: 4px;
     text-align: center;
